add: Header Component add: Contact Component add: Portfolio Component

--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -1,2 +1,10 @@
 @tailwind preflight;
 @tailwind utilities;
+
+a {
+  @apply .text-grey .no-underline;
+}
+
+.is-active {
+  @apply .text-blue .border-b-2 .border-blue;
+}
