add: page background

--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -1,6 +1,11 @@
 @tailwind preflight;
 @tailwind utilities;
 
+.icons {
+  background-image: url('./assets/img/icons.png') !important;
+  background-repeat: repeat;
+}
+
 a {
   @apply .text-grey .no-underline;
 }
